# ontology-rag

./: .env.example  .gitignore  README.md  pyproject.toml
data/: faq.csv  glossary.json  my_document.txt  ontology_basics.txt
docs/: INSTALLATION.md
examples/: basic_usage.py
notebooks/: 01_getting_started.ipynb  01_rag_tutorial.ipynb  02_practical_examples.ipynb  03_ontology_etl.ipynb
src/ontology_rag/: __init__.py  cli.py
src/ontology_rag/core/: __init__.py  rag_engine.py
src/ontology_rag/embeddings/: client.py
src/ontology_rag/storage/: vector_store.py
